tests/base/parser/bad/exps/exp_t-fun-with.scilexp
fun x :: Bool => x (* should be fun(x : Bool) => x *)
